Fixed window overflow - chat window now automatically scrolls down to latest message

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
+@import './_window.css';
+@import './_header.css';
+@import './_messages.css';
+@import './_input.css';
+
 @media (max-width: 600px) {
     [class*="banner"] {
         display: none;
@@ -6,215 +11,4 @@
 
 .chat{
     font-family: Arial;
-}
-.chat-header{
-    padding: 10px 12px 9px 8px;
-    background-color: #c33d31;
-}
-.chat-header .title{
-  font-size: 22px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: white;
-}
-.chat-header > .header-elements{
-    margin-right: 5px;
-    margin-left: 5px;
-    gap: 20%;
-}
-.chat-header > .header-elements > a > img{
-    width: 24px;
-    height: 24px;
-    margin: 0 8px 1px 0;
-}
-
-.chat-window{
-    background: linear-gradient(#f9f7f2, #f9f7f2);
-}
-
-.msg-wrapper.my-message{
-    justify-content: flex-end;
-}
-.msg-date-divider{
-    height: 34px;
-    padding: 10px;
-    margin:20px;
-}
-.msg-date-divider > span{
-    font-size: 13px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: -0.24px;
-    text-align: center;
-}
-
-.bubble{
-    max-width: 80%;
-    border-radius: 8px 8px 8px 0px;
-    padding: 5px 10px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.05);
-    background-color:white;
-}
-.bubble.my-message{
-    border-radius: 8px 8px 0px 8px;
-    background-color: #3498db;
-}
- .message{
-    opacity: 0.9;
-    font-family: Arial;
-    font-size: 15px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.33;
-    letter-spacing:0.5px;
-    color: #333333;
-}
-
-.message.my-message{
-    color: white;
-}
-
-.icon-wrapper.misc{
-    height: 24px;
-    width: 24px;
-    opacity: 0.4;
-    border-radius: 18px;
-    background-color: #e6e6e6;
-}
-.icon-wrapper.misc > img{
-    width: 18px;
-}
-
-.msg-bar-holder{
-    padding: 0 4px;
-    background-color: white;
-    width: 100%;
-}
-.text-input{
-  margin: 10px 4px;
-  padding: 6px 14px 6px 10px;
-  border-radius: 17px;
-  background-color:#ecf0f1;
-  /* max-width:85%; */
-  width: 100px;
-  /* ingen aning varför ovan width funkar */
-}
-.text-input.collapsed{
-    max-height: 40px;
-}
-.input{
-    overflow:auto;
-    max-height: 100px;
-    outline: none;
-    font-size: 16px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-}
-.input::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
-}
-.icon-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-self: flex-end;
-    width: 40px;
-    height: 54px;
-    padding: 15px 8px 15px 8px;
-}
-.icon-wrapper.arrow{
-    animation-name: fadeInOpacity;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in;
-    animation-duration: 0.15s;
-}
-.icon-wrapper.gallery{
-    animation-name: fadeInOpacity;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 0.15s;
-}
-.icon-wrapper > a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-    align-self: flex-end;
-}
-
-span.input[contenteditable] {
-    display: inline-block;
-}
-span.input[contenteditable]:empty::before {
-    content: 'Aa';
-    display: inline-block;
-    color: grey;
-}
-span.input[contenteditable]:empty:focus::before {
-    content: ' ';
-}
-
-  .collapse:not(.show){
-      display: none!important;
-      min-width:100px;
-  }
-
-  .collapsing {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    -webkit-transition-property: height, visibility;
-    transition-property: height, visibility;
-    -webkit-transition-duration: .35s;
-    transition-duration: .35s;
-    -webkit-transition-timing-function: ease;
-    transition-timing-function: ease;
-  }
-  .collapsing.width {
-    -webkit-transition-property: width, visibility;
-    transition-property: width, visibility;
-    width: 0;
-    height: auto;
-  }
-
-.msg-misc{
-    display:none;
-}
-
-.msg-wrapper:hover .msg-misc{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    opacity: 1;
-	animation-name: fadeInOpacity;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-in;
-	animation-duration: 0.15s;
-}
-
-@keyframes fadeInOpacity {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-@keyframes fadeOutOpacity {
-	0% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
 }
